[package]
name = "rsflex"
version = "0.3.1"
authors = ["Curly <11898833+curlpipe@users.noreply.github.com>"]
description = "A super fast system information displayer written in Rust"
homepage = "https://github.com/curlpipe/rsflex"
repository = "https://github.com/curlpipe/rsflex"
license = "MPL-2.0"
readme = "README.md"
keywords = ["flex", "fetch", "rust", "terminal", "command-line"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"

[dependencies]
cmd_lib = "0.11.6"
lliw = "0.1.1"
regex = "1.4.3"
unicode-width = "0.1.8"
